@@ -36,30 +36,3 @@ void Timer::alarm(unsigned seconds) throw() {
 	alarms2[this] = seconds;
 	modified = true;
 }
-
-/*
-#include <stdio.h>
-
-class A : public Timer {
-public:
-	A() {};
-	void wakeMe(unsigned s) {
-		alarm(s);
-	}
-	virtual void onAlarm() throw() {
-		fprintf(stderr, "alarm at %u\n", Timer::getSecond());
-		alarm(1);
-	}
-};
-	
-int main() {
-	A a, b, c;
-	a.wakeMe(3);
-	b.wakeMe(5);
-	c.wakeMe(7);
-	for(int i = 0; i < 50; ++i) {
-		Timer::tick();
-	}
-	return 0;
-}
-*/
