@@ -204,57 +204,3 @@ bool XmlTok::save(string const& filename) const throw()
 	fclose(fp);
 	return true;
 }
-
-/*
-int main()
-{
-	XmlTok root;
-	XmlTok* p = &root;
-
-	p = p->addChild("qhub");
-	p->setAttr("enabled", "true");
-	p = p->addChild("server");
-	p->setAttr("address", "0.0.0.0");
-	p->setAttr("port", "9001");
-	p = p->getParent();
-	p = p->addChild("motd");
-	p->setData("Testhub bla bla");
-	
-	fprintf(stderr, "%s\n", root.toString().c_str());
-}
-*/
-
-/*
-int main()
-{
-	XmlTok root;
-	root.load("xml");
-	fprintf(stderr, "%s\n", root.toString().c_str());
-
-	XmlTok* p = &root;
-	if(p->findChild("xml")) {
-		p = p->getNextChild();
-		if(p->findChild("qhub")) {
-			p = p->getNextChild();
-			
-			// single item
-			if(p->findChild("server")) {
-				p = p->getNextChild();
-				fprintf(stderr, "serveraddress = %s\n", p->getAttr("address").c_str());
-				fprintf(stderr, "serverport = %s\n", p->getAttr("port").c_str());
-				p = p->getParent();
-			}
-
-			// list
-			XmlTok* tmp;
-			p->findChild("motd");
-			while((tmp = p->getNextChild()))
-				fprintf(stderr, "motddata = %s\n", tmp->getData().c_str());
-
-			p = p->getParent();
-		}
-		p = p->getParent();
-	}		
-	return 0;
-}
-*/
