@@ -6,5 +6,6 @@ namespace qhub
 
 std::FILE* qerr = stderr;
 std::FILE* qstat = stdout;
+std::FILE* qline = stdout;
 
 }
