@@ -89,16 +89,16 @@ void FsUtil::on(PluginStarted&, Plugin* p) throw()
 		load();
 		virtualfs = (VirtualFs*)Plugin::data.getVoidPtr(idVirtualFs);
 		if(virtualfs) {
-			fprintf(stderr, "success: Plugin FsUtil: VirtualFs interface found.\n");
+			log(qstat, "success: Plugin FsUtil: VirtualFs interface found.");
 			initVFS();
 		} else {
-			fprintf(stderr, "warning: Plugin FsUtil: VirtualFs interface not found.\n");
+			log(qerr, "warning: Plugin FsUtil: VirtualFs interface not found.");
 		}
-		fprintf(stderr, "success: Plugin FsUtil: Started.\n");
+		log(qstat, "success: Plugin FsUtil: Started.");
 	} else if(!virtualfs) {
 		virtualfs = (VirtualFs*)Plugin::data.getVoidPtr(idVirtualFs);
 		if(virtualfs) {
-			fprintf(stderr, "success: Plugin FsUtil: VirtualFs interface found.\n");
+			log(qstat, "success: Plugin FsUtil: VirtualFs interface found.\n");
 			initVFS();
 		}
 	}
@@ -110,9 +110,9 @@ void FsUtil::on(PluginStopped&, Plugin* p) throw()
 		if(virtualfs)
 			deinitVFS();
 		save();
-		fprintf(stderr, "success: Plugin FsUtil: Stopped.\n");
+		log(qstat, "success: Plugin FsUtil: Stopped.");
 	} else if(virtualfs && p == virtualfs) {
-		fprintf(stderr, "warning: Plugin FsUtil: VirtualFs interface disabled.\n");
+		log(qerr, "warning: Plugin FsUtil: VirtualFs interface disabled.\n");
 		virtualfs = NULL;
 	}
 }
