@@ -43,25 +43,9 @@ struct timer {
 
 static void *on_lookup(oop_adapter_adns *adns, adns_answer *reply, void *data)
 {
-	//fprintf(stdout, "%s =>",reply->owner);
-	//fflush(stdout);
-
 	DNSUser* d = (DNSUser*) data;
 
 	d->onLookup(reply);
-
-	/*if (adns_s_ok != reply->status) {
-		printf(" error: %s\n",adns_strerror(reply->status));
-	} else {
-		if (NULL != reply->cname) {
-			printf(" (%s)",reply->cname);
-		}
-		assert(adns_r_a == reply->type);
-		for (int i = 0; i < reply->nrrs; ++i) {
-			printf(" %d: %s",i, inet_ntoa(reply->rrs.inaddr[i]));
-		}
-		printf("\n");
-	}*/
 
 	return OOP_CONTINUE;
 }
